--- a/style.css
+++ b/style.css
@@ -4,7 +4,17 @@
 	border: none;
 	outline: none;
 }
-
+:root {
+	font-size: 16px;
+}
+@media only screen and (max-width: 1000px) {
+	:root {
+		font-size: 8px;
+	}
+	#about__main,#contact__main {
+		flex-direction: column;
+	}
+}
 @font-face {
   font-family: Ubuntu-Regular;
   src: url('fonts/Ubuntu-Regular.ttf');
@@ -78,13 +88,13 @@
 }
 .acceuil__main-1__text {
 	font-family: Ubuntu-Bold;
-	font-size: 9vh;
+	font-size: 4rem;
 	text-align: center;
 
 }
 .acceuil__main-2__text {
 	font-family: Ubuntu-Bold;
-	font-size: 8vh;
+	font-size: 4rem;
 	color: black;
 	text-align: center;
 	padding: 2vh;
@@ -212,7 +222,7 @@
 	margin-top: .5vh;
 	display: block;
 	font-family: Ubuntu-Regular;
-	font-size: 2vh;
+	font-size: 1rem;
 }
 .footer__site-map a {
 	text-decoration: underline;
@@ -221,7 +231,7 @@
 .footer__credit {
 	display: block;
 	font-family: Ubuntu-Regular;
-	font-size: 2vh;
+	font-size: 1rem;
 }
 
 #navbar {
@@ -281,7 +291,7 @@
 	border-radius: 1vw;
 	font-family: Ubuntu-Regular;
 	color: black;
-	font-size: 3vh;
+	font-size: 2rem;
 	transform: translateX(-60vw);
 }
 .navbar__link:first-child {
@@ -304,51 +314,34 @@
 
 
 #about__main {
-	display: block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	width: 100vw;
 	position: absolute;
-	top: 30vh;
+	top: 8rem;
 	transition: all .5s ease;
 }
 .about__main__text {
 	font-family: Ubuntu-Regular;
-	font-size: 3.5vh;
-	margin-left: 45vw;
+	font-size: 2rem;
 	
+	background-color: rgba(255,255,255,0.5);
+	border-radius: 1rem;
+	padding: 2vw;
 }
 .about__main__image {
 	display: block;
-	position: absolute;
-	content: "";
-	width: 30vw;
-	height: 40vh;
-	background-size: contain;
-	background-repeat: no-repeat;
-	top: -15vh;
-	left: 10vw;
+	padding: 0 2vw 6vh;
+	width: 40rem;
+	height: 30rem;
 	transform: scaleX(-1);
-
 }
 .about__main__image:hover {
 	animation: hue-rotate 1s linear infinite;
 	animation-fill-mode: unset;
 }
-.about__main__text::after {
-	display: block;
-	position: absolute;
-	content: "";
-	width: 46vw;
-	height: 12vh;
-	top: 0;
-	margin-top: -2vw;
-	margin-left: -2vw;
-	z-index: -1;
-	background-color: white;
-	filter: blur(2px);
-	border-radius: 4vh;
-	opacity: 0.5;
-	padding: 2vw;
-}
+
 
 
 #about__main.transition,#contact__main.transition {
@@ -357,37 +350,26 @@
 }
 
 #contact__main {
-	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 100vw;
 	position: absolute;
-	top: 30vh;
+	top: 8rem;
 	transition: all .5s ease;	
 
 }
 .contact__main__text {
 	font-family: Ubuntu-Regular;
-	font-size: 3.5vh;
-	margin-left: 45vw;
-}
-.contact__main__text::after {
-	display: block;
-	position: absolute;
-	content: "";
-	width: 35vw;
-	height: 20vh;
-	top: 0;
-	margin-top: -2vw;
-	margin-left: -2vw;
-	z-index: -1;
-	background-color: white;
-	filter: blur(2px);
-	border-radius: 4vh;
-	opacity: 0.5;
+	font-size: 2rem;
+	
+	background-color: rgba(255,255,255,0.5);
+	border-radius: 1rem;
 	padding: 2vw;
 }
 .contact__main__image-2 {
-	width: 8vh;
-	margin-bottom: -2vh;
+	width: 4rem;
+	margin-bottom: -0.5rem;
 	transition: all .25s ease;
 
 }
@@ -401,14 +383,9 @@
 }
 .contact__main__image {
 	display: block;
-	position: absolute;
-	content: "";
-	width: 30vw;
-	height: 40vh;
-	background-size: contain;
-	background-repeat: no-repeat;
-	top: -15vh;
-	left: 10vw;
+	padding: 0 2vw 6vh;
+	width: 40rem;
+	height: 30rem;
 	transform: scaleX(-1);
 
 }
